src/css/components.css
body {
  background-color: var(--color-background);
  font-family: var(--font-family);
  font-weight: var(--font-weight-light);
  display: flex;
  flex-direction: column;
  overflow: hidden;
}

/* --------------------------------------- */
/* Components Menu */

.components {
  display: flex;
  flex-direction: row;
  height: 100vh;
}

.component__titles--container {
  background-color: var(--color-background);
  width: 20%;
  max-width: 250px;
  min-width: 230px;
  height: 100vh;
}

.component__titles--container ul {
  list-style: none;
}

.component__title {
  width: 100%;
  padding: 2.5rem;
  border: none;
  font-size: var(--font-size-base);
  background-color: var(--color-black);
  color: var(--color-white);
  cursor: pointer;
  text-align: center;
}

.component__title:hover {
  background-color: var(--color-background);
  color: var(--color-black);
}

.component__title--active {
  background-color: var(--color-background);
  color: var(--color-black);
}

/* --------------------------------------- */
/* Components Menu Toggle */

.menu__toggle-button-container {
  display: flex;
  justify-content: center;
  align-items: center;
}

.menu__toggle-button {
  visibility: hidden;
  background-color: transparent;
  border: none;
  cursor: pointer;
  z-index: 1;
}

.menu__toggle-hamburger {
  display: block;
  display: flex;
  align-items: center;
  justify-content: center;
  color: var(--color-black);
  background-color: var(--color-background);
  width: 40px;
  height: 40px;
  border-radius: 10px;
}

/* --------------------------------------- */
/* Components Content */

.component__content {
  display: none;
  padding: var(--padding-content);
}

.component__content--active {
  display: block;
  padding: 98px 30px;
}

.component__introduction {
  width: 70%;
  font-size: var(--font-size-large);
  margin-bottom: var(--margin-bottom);
}

.component__example-text {
  font-size: var(--font-size-base);
  font-weight: var(--font-weight-regular);
  margin-bottom: 10px;
}

.component__button--example,
.component__button--variants,
.component__button--sizes,
.component__modal--example,
.component__dropdown--example,
.component__toast--example,
.component__alert,
.component__tooltip--example,
.component__accordion--example {
  border: 2px solid var(--color-black);
  border-radius: var(--border-radius-large);
  padding: 25px;
  margin-bottom: var(--margin-bottom);
  width: 100%;
}

/* --------------------------------------- */
/* Responsive Adjustments */
/* Tablet */

@media screen and (max-width: 820px) {
  .component__titles--container {
    position: fixed;
    top: 0;
    left: -100%;
    width: 100%;
    height: 100vh;
    flex-direction: column;
    background-color: var(--color-black);
    transition: left 0.3s ease;
    z-index: 1;
    overflow: visible;
  }

  .component__titles--container--active {
    left: 0;
  }

  .component__title,
  .component__example-text {
    font-size: 23px;
  }

  .menu__toggle-button {
    visibility: visible;
    position: absolute;
    top: 10px;
    left: 10px;
    z-index: 2;
  }

  .component__introduction {
    width: 100%;
  }
}

/* --------------------------------------- */
/* Mobile */

@media screen and (max-width: 430px) {
  .component__titles--container {
    width: 100%;
    height: 100%;
  }

  .menu__toggle-button {
    z-index: 1;
  }

  .component__content {
    padding: 20px;
    padding-top: 70px;
  }

  .component__introduction {
    font-size: 25px;
    padding-bottom: 30px;
  }

  .component__example-text {
    font-size: 19px;
  }
}

